--- a/index.html
+++ b/index.html
@@ -3,33 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="images/Enlightia (1).png" />
     <title>Dinesh Korukonda</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="uc__wrapper">
-        <div class="uc__details">
-            <h1 class="title">Coming Soon!</h1>
-            <h3 class="intro">
-                We are working hard to give you a better experience.
-            </h3>
-            <p class="uc__description">
-                We are working hard on it & the site may go live very soon. We promise, it will be worth the wait!
-            </p>
-            <div class="uc__subscribe">
-                <h3>Get Notified When We Go Live</h3>
-                <div class="uc__form">
-                    <form action="#">
-                        <input type="email" class="email" placeholder="Email Address..">
-                        <input type="submit" class="submit" value="Get Notified">
-                    </form>
-                </div>
+    <div class="container">
+        <div class="container-one">
+            <div class="one-one">
+                <button>
+                    <img src="Assets/Dinesh.jpg" height="30vh" alt="">
+                </button>
             </div>
         </div>
-        <div class="uc__art">
-            <img src="navLogo.7578b5b7a67b6580e929.png" alt="">
+        <div class="container-two">
+            <img src="Assets/undraw_programming_re_kg9v.svg" height="350vh" alt="">
         </div>
     </div>
 </body>
