--- a/Version2/index.html
+++ b/Version2/index.html
@@ -25,6 +25,18 @@
                         <a href="#">Blogs</a>
                 </div>
             </nav>
+        <div class="section-one">
+            <div class="section-one-in">
+                <!-- <img src="Dinesh.jpg" height="90vh"> -->
+                <p>Hi,This is Dinesh Korukonda</p>
+               <span> <h3>Constructing solutions is  my learning symphony.</h3></span>
+                <h5>a Learner, Developer, Student , and Tech Geek <br>
+                    Aspiring Full Stack Web Developer | Proficient in HTML, CSS, JavaScript & Java | Linux Enthusiast |Passionate Coding Artist|</h5>
+                <button>
+                    Connect with me
+                </button>
+            </div>
+        </div>
         </div>
     </div>
 </body>
