--- a/Version2/index.html
+++ b/Version2/index.html
@@ -37,6 +37,23 @@
                 </button>
             </div>
         </div>
+        <div class="section-three">
+            <h2>Servies</h2>
+            <div class="section-three-boxs">
+                <div class="box">
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis ipsum sapiente ut laudantium cupiditate quos nulla aliquam aspernatur asperiores, iusto, delectus vero doloribus fugit quis reprehenderit volupt</p>
+                </div>
+                <div class="box">
+                    <h3>Desginer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, harum numquam. Totam, ullam esse. Sint suscipit repellendus fugit. Iusto odio ipsum culpa itaque asperiores, assumenda nostrum labore ipsa architecto volupt</p>
+                </div>
+                <div class="box">
+                    <h3>Researcher</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat ipsam porro quas reprehenderit ea delectus error, harum perspiciatis unde ad deleniti distinctio, ratione soluta voluptas quisquam in maxime earum alias.</p>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
 </body>
