SectionTwo Created || SectionThree Completed

--- a/Version2/index.html
+++ b/Version2/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Dinesh Korukonda</title>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -12,7 +14,7 @@
             <nav>
                 <div class="nav-one">
                     <a href="#">
-                        <i class="fa fa-clone"></i>
+                        <!-- <i class="fa fa-clone"></i> -->
                         <h3>Dinesh Korukonda</h3>
                     </a>
                 </div>
@@ -37,18 +39,24 @@
                 </button>
             </div>
         </div>
+        <div class="section-two">
+            
+        </div>
         <div class="section-three">
             <h2>Servies</h2>
             <div class="section-three-boxs">
                 <div class="box">
+                    <!-- <i class="fas fa-terminal"></i> -->
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis ipsum sapiente ut laudantium cupiditate quos nulla aliquam aspernatur asperiores, iusto, delectus vero doloribus fugit quis reprehenderit volupt</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis ipsum sapiente ut laudantium cupiditate quos nulla aliquam aspernatur asperiores, iusto, delectus vero doloribus fugit quis </p>
                 </div>
                 <div class="box">
+                    <!-- Icons are needed to add -->
                     <h3>Desginer</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, harum numquam. Totam, ullam esse. Sint suscipit repellendus fugit. Iusto odio ipsum culpa itaque asperiores, assumenda nostrum labore ipsa architecto volupt</p>
                 </div>
                 <div class="box">
+                    <!-- Icons needed to be added -->
                     <h3>Researcher</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat ipsam porro quas reprehenderit ea delectus error, harum perspiciatis unde ad deleniti distinctio, ratione soluta voluptas quisquam in maxime earum alias.</p>
                 </div>
