Images section added

--- a/Version2/index.html
+++ b/Version2/index.html
@@ -40,7 +40,13 @@
             </div>
         </div>
         <div class="section-two">
-            
+         <div class="section-two-in">
+            <div class="section-two-box">
+                <img src="./Assets/photo_2024-04-02 18.15.01.jpeg" height="190vh" alt="">
+                <img src="./Assets/photo_2024-04-02 18.15.03.jpeg"  height="190vh">
+                <img src="./Assets/photo_2024-04-02 18.15.05.jpeg" height="190vh" alt="">
+            </div>
+         </div>   
         </div>
         <div class="section-three">
             <h2>Servies</h2>
