Infinite Scroll Started Building

--- a/Version2/index.html
+++ b/Version2/index.html
@@ -40,34 +40,38 @@
             </div>
         </div>
         <div class="section-two">
-         <div class="section-two-in">
+         <div class="sefction-two-in">
             <div class="section-two-box">
                 <img src="./Assets/photo_2024-04-02 18.15.01.jpeg" height="190vh" alt="">
                 <img src="./Assets/photo_2024-04-02 18.15.03.jpeg"  height="190vh">
                 <img src="./Assets/photo_2024-04-02 18.15.05.jpeg" height="190vh" alt="">
+                <img src="./Assets/IMG_20231025_061331_857.jpg" height="190vh" alt="">
+                <img src="./Assets/IMG_20231020_151721_195.jpg" height="190vh" alt="">
+                <img src="./Assets/20240217_194633.jpg" height="190vh" alt="">
+                <img src="./Assets/20240217_103643.jpg" height="190vh" alt="">
             </div>
          </div>   
         </div>
-        <div class="section-three">
+        <!-- <div class="section-three">
             <h2>Servies</h2>
             <div class="section-three-boxs">
                 <div class="box">
                     <!-- <i class="fas fa-terminal"></i> -->
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis ipsum sapiente ut laudantium cupiditate quos nulla aliquam aspernatur asperiores, iusto, delectus vero doloribus fugit quis </p>
+                    <!-- <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis ipsum sapiente ut laudantium cupiditate quos nulla aliquam aspernatur asperiores, iusto, delectus vero doloribus fugit quis </p> -->
                 </div>
-                <div class="box">
+                <!-- <div class="box">
                     <!-- Icons are needed to add -->
-                    <h3>Desginer</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, harum numquam. Totam, ullam esse. Sint suscipit repellendus fugit. Iusto odio ipsum culpa itaque asperiores, assumenda nostrum labore ipsa architecto volupt</p>
-                </div>
-                <div class="box">
+                    <!-- <h3>Desginer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, harum numquam. Totam, ullam esse. Sint suscipit repellendus fugit. Iusto odio ipsum culpa itaque asperiores, assumenda nostrum labore ipsa architecto volupt</p> -->
+                </div> -->
+                <!-- <div class="box">
                     <!-- Icons needed to be added -->
-                    <h3>Researcher</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat ipsam porro quas reprehenderit ea delectus error, harum perspiciatis unde ad deleniti distinctio, ratione soluta voluptas quisquam in maxime earum alias.</p>
-                </div>
+                    <!-- <h3>Researcher</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat ipsam porro quas reprehenderit ea delectus error, harum perspiciatis unde ad deleniti distinctio, ratione soluta voluptas quisquam in maxime earum alias.</p> -->
+                </div> -->
             </div>
-        </div>
+        </div> -->
         </div>
     </div>
 </body>
