--- a/Client/index.html
+++ b/Client/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <h1>Portfolio</h1>
-            <h2>We Are Coming Soon.</h2>
+            <h2>Dinesh korukonda</h2>
             <div class="count">
                 <div class="countd">
                     <span id="days">00</span><br>
