--- a/Client/index.html
+++ b/Client/index.html
@@ -37,6 +37,21 @@
                         Aspiring Full Stack Web Developer | Proficient in HTML, CSS, JavaScript & Java and  Linux Enthusiast </h3>
                 </div>
             </div>
+            <div class="home-section-two">
+                <div class="home-section-two-in">
+                    <div class="home-section-two-in-one">
+                        <h3>Work Experiences</h3>
+                        <div class="work-one">
+                            <h1>Project-Phantom</h1>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="home-section-two-in-two">
+                        <h3>Education</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus commodi quo obcaecati reprehenderit modi debitis sunt, doloribus libero recusandae sequi! Placeat cumque maiores debitis labore possimus, at temporibus dolore dolorem.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
